app/assets/stylesheets/pages/_home.scss
// Specific CSS for your home-page
.banner {
  height: 100vh;
  position: absolute;
  bottom:0;
  z-index: 0;
}

.banner-text {
  z-index: 1;
  position: relative;
  color: white;
  bottom: 28vh;
  margin: auto;
  width: 30vw;
  text-align: center;
}

.fa-arrow-down:before {
  font-size: 2.4rem;
}

.black-part {
  padding: 5%;
  background: $hg-background;
  color: white;
}

.explore-stations {
  text-align: center;
  margin-bottom: 8%;
}

.pricing {
  text-align: center;
}

.pricing-cards {
  display: wrap;
}

.pricing-card {
  margin: 2%;
  padding: 2%;
  background-color: $hg-overlay;
}

.pricing-card p {
  margin: 0;
  line-height: 1.2;
}

@media (min-width: 410px) {
  .pricing-cards {
    display: flex;
  }
}

